--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link href='/public/css/index.css' rel='stylesheet'>
         <script src='/public/js/editor.min.js'></script>
-        <script src='/public/js/index.js'></script>
+        <script src='/public/js/index.min.js'></script>
     </head>
     <body>
         <div id='container'>
