Implement ping/pong ex + style fix for file preview

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
                 <div id='text-input'>
                     <form action>
                         <div id='messenger' data-text='Send a message to the group'  contenteditable='true' formaction></div>
+                        <div id='file-preview-container'></div>
                     </form>
                     <div id='toolbar'>
                         <select id='face_emojis'>
